[gd_scene load_steps=10 format=3 uid="uid://cysugsgf28te3"]

[ext_resource type="Texture2D" uid="uid://cuqvt63fr7t1n" path="res://icon.svg" id="1_63qoc"]
[ext_resource type="Script" path="res://elements/player/player.gd" id="1_wnn2l"]
[ext_resource type="Script" path="res://data/components/velocity_component.gd" id="2_ssirl"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_gi8jv"]
[ext_resource type="Script" path="res://data/components/input_component.gd" id="3_r0kbe"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_xwe54"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_d645t"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_fcg1d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ggxjk"]
size = Vector2(64, 62)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("state_chart", "velocity_component", "input_component")]
position = Vector2(568, 293)
script = ExtResource("1_wnn2l")
state_chart = NodePath("StateChart")
velocity_component = NodePath("VelocityComponent")
input_component = NodePath("InputComponent")

[node name="VelocityComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor", "input_component")]
script = ExtResource("2_ssirl")
actor = NodePath("..")
input_component = NodePath("../InputComponent")

[node name="InputComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("3_r0kbe")
actor = NodePath("")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_63qoc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ggxjk")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_gi8jv")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("4_xwe54")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_d645t")

[node name="ToWalking" type="Node" parent="StateChart/CompoundState/Idle"]
script = ExtResource("6_fcg1d")
to = NodePath("../../Walking")
event = &"walking"
delay_in_seconds = "0.0"

[node name="Walking" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_d645t")

[node name="ToIdle" type="Node" parent="StateChart/CompoundState/Walking"]
script = ExtResource("6_fcg1d")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="Attacking" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_d645t")
